--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body ng-controller="gitHubController">
 
     <p>Enter a GitHub username to seach</p>
-    <input type="text" ng-model="username" placeholder="GitHub username...">
+    <input type="text" ng-model="username" ng-change="onUserInputChanged()" placeholder="GitHub username...">
 
 </body>
 
