--- a/index.html
+++ b/index.html
@@ -16,6 +16,30 @@
     <p>Enter a GitHub username to seach</p>
     <input type="text" ng-model="username" ng-change="onUserInputChanged()" placeholder="GitHub username...">
 
+    <div ng-hide="userFound">
+        <p>User not found</p>
+    </div>
+
+    <div ng-show="userFound">
+        <table>
+            <tr>
+                <th>User</th>
+                <th>Followers</th>
+            </tr>
+            <tr ng-repeat="user in usersData">
+                <td>
+                    <h3>{{user.login}}</h3>
+                    <img width="80" height="80" src="{{user.avatar_url}}" alt="{{user.name}}">
+                </td>
+                <td>
+                    <ul ng-repeat="follower in user.followers_url | limitTo:3">
+                        <li>{{follower.login}}</li>
+                    </ul>
+                </td>
+            </tr>
+        </table>
+    </div>
+
 </body>
 
 </html>
