--- a/index.html
+++ b/index.html
@@ -26,13 +26,15 @@
                 <th>User</th>
                 <th>Followers</th>
             </tr>
-            <tr ng-repeat="user in usersData">
+            <tr>
                 <td>
-                    <h3>{{user.login}}</h3>
-                    <img width="80" height="80" src="{{user.avatar_url}}" alt="{{user.name}}">
+                    <h3>{{usersData.login}}</h3>
+                    <img width="80" height="80" src="{{usersData.avatar_url}}" alt="{{user.name}}">
                 </td>
                 <td>
-                    
+                    <ul ng-repeat="follower in userFollowersData | limitTo:3">
+                        <li>{{follower.login}}</li>
+                    </ul>
                 </td>
             </tr>
         </table>
