--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <tr>
                 <td>
                     <h3>{{usersData.login}}</h3>
-                    <img width="80" height="80" src="{{usersData.avatar_url}}" alt="{{user.name}}">
+                    <img width="80" height="80" src="{{usersData.avatar_url}}" alt="{{usersDatauser.name}}">
                 </td>
                 <td>
                     <ul ng-repeat="follower in userFollowersData | limitTo:3">
