--- a/index.html
+++ b/index.html
@@ -49,7 +49,15 @@
             </tr>
             <tr ng-repeat="repo in userReposData">
                 <td>
-
+                    <h3>{{repo.name}}</h3>
+                </td>
+                <td>
+                    <p>{{repo.description}}</p>
+                </td>
+                <td>
+                    <ul ng-repeat="commit in userRepoCommitsData | limitTo:3">
+                        <li>{{commit | json}}</li>
+                    </ul>
                 </td>
             </tr>
         </table>
