--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </tr>
             <tr ng-repeat="repo in userReposData">
                 <td>
-                    <h3>{{repo.name}}</h3>
+                    <p>{{repo.name}}</p>
                 </td>
                 <td>
                     <p>{{repo.description}}</p>
