--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <p>{{repo.description}}</p>
                 </td>
                 <td ng-init="commits = getRepoCommits(repo.id)">
-                    {{commits | json }}
+                    HERE: {{commits | json }}
                     <ul class="list-group" ng-repeat="commit in commits | limitTo:3">
                         <li>
                             <p>SHA: </p>
