--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <th>Description</th>
                 <th>Last Changes</th>
             </tr>
-            <tr ng-repeat="repo in userReposData">
+            <tr ng-repeat="repo in userReposData" emit-on-each-repo>
                 <td>
                     <p>{{repo.name}}</p>
                 </td>
@@ -55,7 +55,7 @@
                     <p>{{repo.description}}</p>
                 </td>
                 <td ng-init="getRepoCommits(repo.id)">
-                    <ul class="list-group" ng-repeat="commit in userCommitsData | filter:userOnly | limitTo:3" emit-last-repeater-element>
+                    <ul class="list-group" ng-repeat="commit in userCommitsData | filter:userOnly | limitTo:3">
                         <li>
                             <p>SHA: {{commit.sha}}</p>
                             <p>Comitter: {{commit.committer.login}}</p>
