--- a/index.html
+++ b/index.html
@@ -48,22 +48,20 @@
                 <th>Last Changes</th>
             </tr>
             <tr ng-repeat="repo in userReposData">
-                <div ng-init="getRepoCommits(repo.id)">
-                    <td>
-                        <p>{{repo.name}}</p>
-                    </td>
-                    <td>
-                        <p>{{repo.description}}</p>
-                    </td>
-                    <td>
-                        <ul class="list-group" ng-repeat="commit in userCommitsData | filter:userOnly | limitTo:3">
-                            <li>
-                                <p>SHA: {{commit.sha}}</p>
-                                <p>Comitter: {{commit.committer.login}}</p>
-                            </li>
-                        </ul>
-                    </td>
-                </div>
+                <td>
+                    <p>{{repo.name}}</p>
+                </td>
+                <td>
+                    <p>{{repo.description}}</p>
+                </td>
+                <td>
+                    <ul class="list-group" ng-repeat="commit in getRepoCommits(repo.id) | filter:userOnly | limitTo:3">
+                        <li>
+                            <p>SHA: {{commit.sha}}</p>
+                            <p>Comitter: {{commit.committer.login}}</p>
+                        </li>
+                    </ul>
+                </td>
             </tr>
         </table>
     </div>
