--- a/index.html
+++ b/index.html
@@ -47,21 +47,22 @@
                 <th>Description</th>
                 <th>Last Changes</th>
             </tr>
-            <tr ng-repeat="repo in userReposData">
+            <tr ng-repeat="repo in userReposData"  emit-last-repeater-element>
                 <td>
                     <p>{{repo.name}}</p>
                 </td>
                 <td>
                     <p>{{repo.description}}</p>
                 </td>
+                <!--
                 <td ng-init="getRepoCommits(repo.id)">
-                    <ul class="list-group" ng-repeat="commit in userCommitsData">
+                    <ul class="list-group" ng-repeat="commit in userCommitsData | filter:userOnly | limitTo:3">
                         <li>
                             <p>SHA: {{commit.sha}}</p>
                             <p>Comitter: {{commit.committer.login}}</p>
                         </li>
                     </ul>
-                </td>
+                </td>-->
             </tr>
         </table>
     </div>
