--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <th>Description</th>
                 <th>Last Changes</th>
             </tr>
-            <tr ng-repeat="repo in userReposData"  emit-last-repeater-element>
+            <tr ng-repeat="repo in userReposData"  emit-on-each-repo>
                 <td>
                     <p>{{repo.name}}</p>
                 </td>
