--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
                 </tr>
             </table>
         </div>
-        </div>
 
         <div ng-show="userHasRepos">
             <table class="table table-bordered">
@@ -78,8 +77,8 @@
         </div>
     </div>
 
-    <footer width="100%" text-align="center">
-        <h2>Created by Luis Larghi</h2>
+    <footer width="100%">
+        <h4 class="text-center">Created by Luis Larghi</h4>
     </footer>
 </body>
 
